[gd_scene load_steps=4 format=3 uid="uid://cl3ijd6lpc0re"]

[ext_resource type="Script" uid="uid://byrj7sthl4bbu" path="res://reusable/cloud2d/cloud_bottom.gd" id="1_kf82f"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kf82f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kf82f"]

[node name="CloudBottom" type="Node2D"]
script = ExtResource("1_kf82f")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionSideCircle" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -50)
scale = Vector2(5, 5)
shape = SubResource("CircleShape2D_kf82f")

[node name="CollisionRectBottom" type="CollisionShape2D" parent="Area2D"]
position = Vector2(75, -15)
scale = Vector2(7.5, 1.5)
shape = SubResource("RectangleShape2D_kf82f")
